2010-11-07  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gslider.R: packed in alignment widget

	* R/ggroup.R (as.gWidgetsRGtk2.GtkVBox <-
	as.gWidgetsRGtk2.GtkHBox): fixes to ".add" method and fill argument

2010-11-01  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gslider.R (gsliderindex): changed so that can use vector of
	orderable values. Pass to from argument initially.
	

2010-10-26  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/glabel.R (addHandler): for glabel and gimage -- both use event
	boxes -- put in check to see if widget is sensitive to events when
	calling a handler.

2010-10-25  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gvarbrowser.R (idleHandler): hacks to add in auto update
	option. Really should rewrite this to be faster thoough.

2010-10-15  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gcheckbox.R: add option use.togglebutton=TRUE to use toggle
	button in place of checkbox.

2010-10-14  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtree.R (isStillThere): fixes to this -- again.

2010-10-10  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggroup.R: fill argument added. Before was simply taken as "both".

2010-09-29  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gwindow.R (as.gWidgetsRGtk2.GtkWindow): adjustments to border-width

2010-09-25  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gvarbrowser.R: Fixed bug in isStillThere, added summary
	column (Thanks to Tom T. and wxffxw);

2010-08-28  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdialogs.R: Try to make OK button default button. Doesn't
	work, need to use gtkDialog, not gtkMessageDialog it seems

	* R/aaaGenerics.R: in 3rd mous popup propogate signal to next
	handler. (So 3rd mouse will still do selection)

2010-08-26  john verzani  <verzani@john-verzanis-macbook-pro.local>
