@@ -1,3 +1,15 @@
+2010-11-10  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/glayout.R (as.gWidgetsRGtk2.GtkTable): New logic to handle
+	expand, fill, anchor arguments when widget packed into
+	gtkAlignment container
+
+2010-11-09  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/gbutton.R (as.gWidgetsRGtk2.GtkButton): put in
+	gtkAlignmentWidget, along with combobox. Changes behaviour of
+	layout, but implements fill= argument to add method of ggroup
+
 2010-11-07  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/gslider.R: packed in alignment widget
